[package]
authors = ["Henrique Sasaki Yuya <moriturus@alimensir.com>"]
build = "build.rs"
name = "plist-sys"
version = "0.1.0"
description = "Raw bindings to the libplist library."
keywords = ["plist", "libplist"]
categories = ["API bindings"]
license = "MIT"


[build-dependencies]
pkg-config = "0.3.9"

[dependencies]
libc = "0.2.31"
